fixed TOC spacing between number and title

--- a/src/components/toc/toc.module.scss
+++ b/src/components/toc/toc.module.scss
@@ -44,7 +44,11 @@ $mdGrey: #555555;
   #TOC {
     margin-top: $margin-75;
     margin-bottom: $margin-100;
-
+    
+    .number {
+      min-width: 60px;
+    }
+    
     .tile:not(:last-child) {
       border-right: 1px solid $font-lightGrey;
     }
